# cmake_demo

./: CMakeLists.txt  tutorial.c
Tutorial/Step3/: CMakeLists.txt
Tutorial/Step5/MathFunctions/: CMakeLists.txt
Tutorial/Step5/MathFunctions/MathFunction/: CMakeLists.txt  MathFunctions.h  mysqrt.cxx  mysqrt.def
Tutorial/Step5/MathFunctions/tool/: CMakeLists.txt
mathfunc/: CMakeLists.txt  mathfunc.c
